Fix wrapping issue on inline code highlight

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -63,6 +63,7 @@ dd {
 
 .prose p code {
   background: rgba(128, 128, 128, 0.3);
-  padding: 5px;
+  padding: 0 5px;
   border-radius: 0.375rem;
+  display: inline-block;
 }
